--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -46,27 +46,30 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Extract version info from build.gradle
+      - name: Extract version info from build.gradle.kts
         run: |
-          # Lấy versionCode (loại bỏ comment)
-          VERSION_CODE=$(grep 'versionCode' android/app/build.gradle | grep -v '//' | awk '{print $2}')
-          # Lấy versionName (loại bỏ comment và dấu ngoặc kép)
-          VERSION_NAME=$(grep 'versionName' android/app/build.gradle | grep -v '//' | awk '{print $2}' | tr -d '"')
-
+          # Lấy versionCode (số nguyên)
+          VERSION_CODE=$(grep 'versionCode' android/app/build.gradle.kts | grep -v '//' | awk -F'=' '{gsub(/ /,"",$2); print $2}')
+          
+          # Lấy versionName (chuỗi giữa dấu " ")
+          VERSION_NAME=$(grep 'versionName' android/app/build.gradle.kts | grep -v '//' | awk -F'"' '{print $2}')
+          
           # fallback nếu rỗng hoặc versionCode không phải số
           if ! [[ "$VERSION_CODE" =~ ^[0-9]+$ ]]; then
             echo "⚠️ VERSION_CODE invalid, using 1"
             VERSION_CODE=1
           fi
-
+          
           if [ -z "$VERSION_NAME" ]; then
             echo "⚠️ VERSION_NAME empty, using 1.0.0"
             VERSION_NAME="1.0.0"
           fi
-
+          
+          # Ghi vào môi trường CI
           echo "VERSION_CODE=$VERSION_CODE" >> $GITHUB_ENV
           echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
           echo "👉 Detected versionCode=$VERSION_CODE, versionName=$VERSION_NAME"
+      
       
 
       # 5. Phân tích code (lint check)
