--- a/.github/workflows/demo_flavor.yml
+++ b/.github/workflows/demo_flavor.yml
@@ -1,32 +1,36 @@
 name: Flutter Flavors CI/CD
 
 on:
-  workflow_dispatch:
-    inputs:
-      flavor:
-        description: 'Chọn flavor để build'
-        required: true
-        default: 'dev'   # dev hoặc prod
+  push:
+    branches:
+      - main
+      - dev
+      - feature/flavor
+  pull_request:
+    branches:
+      - main
+      - dev
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        flavor: [dev, prod]  # build cho cả 2 flavor cùng lúc
+
     env:
       FLUTTER_VERSION: '3.35.3'
 
     steps:
-      # 1. Checkout code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Setup Flutter
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{ env.FLUTTER_VERSION }}
           channel: stable
 
-      # 3. Cache dependencies
       - name: Cache Flutter dependencies
         uses: actions/cache@v3
         with:
@@ -37,11 +41,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-flutter-
 
-      # 4. Install dependencies
       - name: Install dependencies
         run: flutter pub get
 
-      # 5. Extract version info from build.gradle.kts
       - name: Extract version info
         run: |
           VERSION_CODE=$(grep 'versionCode' android/app/build.gradle.kts | grep -v '//' | awk -F'=' '{gsub(/ /,"",$2); print $2}')
@@ -50,45 +52,41 @@ jobs:
           if ! [[ "$VERSION_CODE" =~ ^[0-9]+$ ]]; then
             VERSION_CODE=1
           fi
-          
           if [ -z "$VERSION_NAME" ]; then
             VERSION_NAME="1.0.0"
           fi
-          
+
           echo "VERSION_CODE=$VERSION_CODE" >> $GITHUB_ENV
           echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
 
-      # 6. Set file version with date
       - name: Set file version with date
         run: |
           TODAY=$(date +%Y-%m-%d)
-          FILE_VERSION="${{ env.VERSION_NAME }}-${{ github.event.inputs.flavor }}-${TODAY}"
+          FILE_VERSION="${VERSION_NAME}-${{ matrix.flavor }}-${TODAY}"
           echo "FILE_VERSION=$FILE_VERSION" >> $GITHUB_ENV
 
-      # 7. Build APK
       - name: Build APK
-        run: flutter build apk --release --flavor ${{ github.event.inputs.flavor }} -t lib/main.dart --build-name=${{ env.VERSION_NAME }} --build-number=${{ env.VERSION_CODE }}
+        run: flutter build apk --release --flavor ${{ matrix.flavor }} -t lib/main.dart --build-name=${VERSION_NAME} --build-number=${VERSION_CODE}
 
       - name: Rename APK
         run: |
-          mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/app-${{ github.event.inputs.flavor }}-${{ env.FILE_VERSION }}.apk
+          mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/app-${{ matrix.flavor }}-${FILE_VERSION}.apk
 
-      - name: Upload APK artifact
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-${{ github.event.inputs.flavor }}-apk
-          path: build/app/outputs/flutter-apk/app-${{ github.event.inputs.flavor }}-${{ env.FILE_VERSION }}.apk
+          name: app-${{ matrix.flavor }}-apk
+          path: build/app/outputs/flutter-apk/app-${{ matrix.flavor }}-${FILE_VERSION}.apk
 
-      # 8. Build AAB
       - name: Build AAB
-        run: flutter build appbundle --release --flavor ${{ github.event.inputs.flavor }} -t lib/main.dart --build-name=${{ env.VERSION_NAME }} --build-number=${{ env.VERSION_CODE }}
+        run: flutter build appbundle --release --flavor ${{ matrix.flavor }} -t lib/main.dart --build-name=${VERSION_NAME} --build-number=${VERSION_CODE}
 
       - name: Rename AAB
         run: |
-          mv build/app/outputs/bundle/release/app-release.aab build/app/outputs/bundle/release/app-${{ github.event.inputs.flavor }}-${{ env.FILE_VERSION }}.aab
+          mv build/app/outputs/bundle/release/app-release.aab build/app/outputs/bundle/release/app-${{ matrix.flavor }}-${FILE_VERSION}.aab
 
-      - name: Upload AAB artifact
+      - name: Upload AAB
         uses: actions/upload-artifact@v4
         with:
-          name: app-${{ github.event.inputs.flavor }}-aab
-          path: build/app/outputs/bundle/release/app-${{ github.event.inputs.flavor }}-${{ env.FILE_VERSION }}.aab
+          name: app-${{ matrix.flavor }}-aab
+          path: build/app/outputs/bundle/release/app-${{ matrix.flavor }}-${FILE_VERSION}.aab
