--- a/.github/workflows/demo_flavor.yml
+++ b/.github/workflows/demo_flavor.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        flavor: [dev, prod]  # build cho cả 2 flavor cùng lúc
+        flavor: [ dev, prod ]  # build cho cả 2 flavor cùng lúc
 
     env:
       FLUTTER_VERSION: '3.35.3'
@@ -70,7 +70,8 @@ jobs:
 
       - name: Rename APK
         run: |
-          mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/app-${{ matrix.flavor }}-${FILE_VERSION}.apk
+          mv build/app/outputs/flutter-apk/app-${{ matrix.flavor }}-release.apk build/app/outputs/flutter-apk/app-${{ matrix.flavor }}-${FILE_VERSION}.apk
+
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
@@ -83,7 +84,8 @@ jobs:
 
       - name: Rename AAB
         run: |
-          mv build/app/outputs/bundle/release/app-release.aab build/app/outputs/bundle/release/app-${{ matrix.flavor }}-${FILE_VERSION}.aab
+          mv build/app/outputs/bundle/${{ matrix.flavor }}/release/app-${{ matrix.flavor }}-release.aab build/app/outputs/bundle/release/app-${{ matrix.flavor }}-${FILE_VERSION}.aab
+
 
       - name: Upload AAB
         uses: actions/upload-artifact@v4
