--- a/.github/workflows/demo_flavor.yml
+++ b/.github/workflows/demo_flavor.yml
@@ -84,8 +84,8 @@ jobs:
 
       - name: Rename AAB
         run: |
-          mv build/app/outputs/bundle/${{ matrix.flavor }}/release/app-${{ matrix.flavor }}-release.aab build/app/outputs/bundle/release/app-${{ matrix.flavor }}-${FILE_VERSION}.aab
-
+          mv build/app/outputs/bundle/${{ matrix.flavor }}Release/app-${{ matrix.flavor }}-release.aab \
+             build/app/outputs/bundle/release/app-${{ matrix.flavor }}-${FILE_VERSION}.aab
 
       - name: Upload AAB
         uses: actions/upload-artifact@v4
